--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,21 @@
   width: 20%;
 }
 
+/* 恢復技能 */
+#hero-image-block   .heal-text {
+  position: absolute;
+  font-size: 60px;
+  color: green;
+  width: 100%;
+  left: 0px;
+  bottom: 50px;
+  font-family: "Contrail One";
+  transition: bottom 500ms;
+}
+#hero-image-block  .heal-text.healed {
+  bottom: 150px;
+}
+
 
 /* 設定 #monster-image-block .character-image 左右反轉 */
 #monster-image-block .character-image {
