effect the heal skill

--- a/css/index.css
+++ b/css/index.css
@@ -115,7 +115,8 @@
 }
 
 #hero-image-block    .character-block .effect-image,
-#monster-image-block .character-block .effect-image {
+#monster-image-block .character-block .effect-image,
+#hero-image-block    .character-block .healeffect-image {
   position: absolute;
   left: 60px;
   bottom: 0px;
